# nogo-panic-example

./: BUILD.bazel  WORKSPACE  main.go  nogo.json
